--- a/app/src/main/res/layout/fragment_genie.xml
+++ b/app/src/main/res/layout/fragment_genie.xml
@@ -7,26 +7,19 @@
     android:background="@android:color/white"
     android:layout_gravity="center">
 
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="141dp"
         android:layout_weight="10.0"
-        android:orientation="horizontal"
         android:background="#ff2312"
+        android:orientation="horizontal"
         android:weightSum="100">
 
-
-        <TextView
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="30"
-            android:text="GENIE PAYMENT"
-            android:textAllCaps="true"
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            android:textSize="40dp"
-            android:textStyle="bold" />
+            android:layout_height="200dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/genie" />
     </LinearLayout>
 
 
@@ -49,30 +42,56 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
-                android:text="FriMi ID/Mobile No. "
+                android:text="Genie ID/Mobile No. "
                 android:textColor="#000000"
                 android:id="@+id/tlocalprod_mrp"
                 android:textSize="25dp"
                 android:textStyle="bold"
                 android:layout_gravity="center"
-                android:gravity="left"
+                android:gravity="center_horizontal"
                 android:paddingLeft="20dp" />
 
-            <EditText
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
-                android:inputType="number"
-                android:ems="10"
-                android:maxLength="10"
-                android:textColor="#000000"
-                android:id="@+id/frimi_test_Wallet_ID"
-                android:textSize="20dp"
-                android:hint="Enter FriMi ID/Mobile No."
-                android:layout_gravity="center"
-                android:layout_margin="16dp"
-                android:background="@drawable/border_style" />
+                android:weightSum="10"
+                android:orientation="horizontal">
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="8"
+                    android:inputType="number"
+                    android:ems="10"
+                    android:maxLength="10"
+                    android:textColor="#000000"
+                    android:id="@+id/Genie_test_Wallet_ID_Tv"
+                    android:textSize="20dp"
+                    android:text="+94 "
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                    android:layout_margin="1dp"
+                    android:background="@drawable/border_style" />
+                />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:inputType="number"
+                    android:ems="10"
+                    android:maxLength="10"
+                    android:textColor="#000000"
+                    android:id="@+id/Genie_test_Wallet_ID"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    android:hint="Enter Genie ID/Mobile No."
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/border_style" />
+
+            </LinearLayout>
         </LinearLayout>
 
 
@@ -80,36 +99,38 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:paddingRight="20dp"
             android:paddingTop="2dp"
-            android:weightSum="1.0"
-            android:paddingRight="20dp">
+            android:weightSum="1.0">
 
             <TextView
+                android:id="@+id/genie_amount_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
-                android:text="Amount "
-                android:textStyle="bold"
-                android:textSize="25dp"
-                android:textColor="#000000"
-                android:id="@+id/localpro_barcode"
                 android:gravity="center"
-                android:paddingLeft="20dp" />
+                android:paddingLeft="20dp"
+                android:text="Amount "
+                android:textColor="#000000"
+                android:textSize="25dp"
+                android:textStyle="bold" />
 
             <EditText
-                android:layout_width="match_parent"
+                android:id="@+id/genie_total_amount"
+                android:layout_width="336dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:inputType="numberDecimal"
-                android:ems="10"
-                android:textColor="#000000"
-                android:textSize="20dp"
-                android:text="20"
-                android:hint="Amount Paying"
-                android:layout_margin="16dp"
-                android:id="@+id/frimi_total_amount"
                 android:layout_gravity="center"
-                android:background="@drawable/border_style" />
+                android:layout_margin="16dp"
+                android:layout_weight="0.5"
+                android:background="@drawable/border_style"
+                android:ems="10"
+                android:maxLength="6"
+                android:textStyle="bold"
+                android:hint="Enter Amount"
+                android:inputType="numberDecimal"
+                android:text=""
+                android:textColor="#000000"
+                android:textSize="20dp" />
 
         </LinearLayout>
     </LinearLayout>
@@ -126,7 +147,7 @@
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:text="PAY"
-            android:id="@+id/frimi_pay"
+            android:id="@+id/genie_pay"
             android:textColor="#ffffff"
             android:textSize="15dp"
             android:background="@drawable/shapebutton"
@@ -136,7 +157,7 @@
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:text="CANCEL"
-            android:id="@+id/frimi_cancel"
+            android:id="@+id/genie_cancel"
             android:textColor="#ffffff"
 
             android:textSize="15dp"
