--- a/app/src/main/res/layout/fragment_genie.xml
+++ b/app/src/main/res/layout/fragment_genie.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:weightSum="100.0"
     android:background="@android:color/white"
@@ -22,147 +24,154 @@
             android:src="@drawable/genie" />
     </LinearLayout>
 
-
-    <LinearLayout
+    <ImageView
+        android:id="@+id/QrimageView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        android:paddingTop="2dp"
-        android:layout_weight="40.0">
+        android:layout_height="200dp"
+        app:srcCompat="@mipmap/ic_launcher"
+        tools:layout_editor_absoluteX="152dp"
+        tools:layout_editor_absoluteY="218dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:weightSum="1.0"
-            android:paddingRight="20dp"
-            android:paddingTop="2dp">
+    <!-- <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="0dp"
+         android:orientation="vertical"
+         android:paddingTop="2dp"
+         android:layout_weight="40.0">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="Genie ID/Mobile No. "
-                android:textColor="#000000"
-                android:id="@+id/tlocalprod_mrp"
-                android:textSize="25dp"
-                android:textStyle="bold"
-                android:layout_gravity="center"
-                android:gravity="center_horizontal"
-                android:paddingLeft="20dp" />
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:orientation="vertical"
+             android:weightSum="1.0"
+             android:paddingRight="20dp"
+             android:paddingTop="2dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:weightSum="10"
-                android:orientation="horizontal">
+             <TextView
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_weight="0.5"
+                 android:text="Genie ID/Mobile No. "
+                 android:textColor="#000000"
+                 android:id="@+id/tlocalprod_mrp"
+                 android:textSize="25dp"
+                 android:textStyle="bold"
+                 android:layout_gravity="center"
+                 android:gravity="center_horizontal"
+                 android:paddingLeft="20dp" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="8"
-                    android:inputType="number"
-                    android:ems="10"
-                    android:maxLength="10"
-                    android:textColor="#000000"
-                    android:id="@+id/Genie_test_Wallet_ID_Tv"
-                    android:textSize="20dp"
-                    android:text="+94 "
-                    android:textStyle="bold"
-                    android:layout_gravity="center"
-                    android:layout_margin="1dp"
-                    android:background="@drawable/border_style" />
-                />
+             <LinearLayout
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_weight="0.5"
+                 android:weightSum="10"
+                 android:orientation="horizontal">
 
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:inputType="number"
-                    android:ems="10"
-                    android:maxLength="10"
-                    android:textColor="#000000"
-                    android:id="@+id/Genie_test_Wallet_ID"
-                    android:textSize="20dp"
-                    android:textStyle="bold"
-                    android:hint="Enter Genie ID/Mobile No."
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:background="@drawable/border_style" />
+                 <TextView
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:layout_weight="8"
+                     android:inputType="number"
+                     android:ems="10"
+                     android:maxLength="10"
+                     android:textColor="#000000"
+                     android:id="@+id/Genie_test_Wallet_ID_Tv"
+                     android:textSize="20dp"
+                     android:text="+94 "
+                     android:textStyle="bold"
+                     android:layout_gravity="center"
+                     android:layout_margin="1dp"
+                     android:background="@drawable/border_style" />
+                 />
 
-            </LinearLayout>
-        </LinearLayout>
+                 <EditText
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:layout_weight="2"
+                     android:inputType="number"
+                     android:ems="10"
+                     android:maxLength="10"
+                     android:textColor="#000000"
+                     android:id="@+id/Genie_test_Wallet_ID"
+                     android:textSize="20dp"
+                     android:textStyle="bold"
+                     android:hint="Enter Genie ID/Mobile No."
+                     android:layout_gravity="center"
+                     android:layout_margin="10dp"
+                     android:background="@drawable/border_style" />
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingRight="20dp"
-            android:paddingTop="2dp"
-            android:weightSum="1.0">
-
-            <TextView
-                android:id="@+id/genie_amount_tv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:gravity="center"
-                android:paddingLeft="20dp"
-                android:text="Amount "
-                android:textColor="#000000"
-                android:textSize="25dp"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/genie_total_amount"
-                android:layout_width="336dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="16dp"
-                android:layout_weight="0.5"
-                android:background="@drawable/border_style"
-                android:ems="10"
-                android:maxLength="6"
-                android:textStyle="bold"
-                android:hint="Enter Amount"
-                android:inputType="numberDecimal"
-                android:text=""
-                android:textColor="#000000"
-                android:textSize="20dp" />
-
-        </LinearLayout>
-    </LinearLayout>
+             </LinearLayout>
+         </LinearLayout>
 
 
-    <LinearLayout
-        android:id="@+id/buttons_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="10.0">
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:orientation="vertical"
+             android:paddingRight="20dp"
+             android:paddingTop="2dp"
+             android:weightSum="1.0">
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:text="PAY"
-            android:id="@+id/genie_pay"
-            android:textColor="#ffffff"
-            android:textSize="15dp"
-            android:background="@drawable/shapebutton"
-            android:layout_weight="1.66" />
+             <TextView
+                 android:id="@+id/genie_amount_tv"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_weight="0.5"
+                 android:gravity="center"
+                 android:paddingLeft="20dp"
+                 android:text="Amount "
+                 android:textColor="#000000"
+                 android:textSize="25dp"
+                 android:textStyle="bold" />
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:text="CANCEL"
-            android:id="@+id/genie_cancel"
-            android:textColor="#ffffff"
+             <EditText
+                 android:id="@+id/genie_total_amount"
+                 android:layout_width="336dp"
+                 android:layout_height="wrap_content"
+                 android:layout_gravity="center"
+                 android:layout_margin="16dp"
+                 android:layout_weight="0.5"
+                 android:background="@drawable/border_style"
+                 android:ems="10"
+                 android:maxLength="6"
+                 android:textStyle="bold"
+                 android:hint="Enter Amount"
+                 android:inputType="numberDecimal"
+                 android:text=""
+                 android:textColor="#000000"
+                 android:textSize="20dp" />
 
-            android:textSize="15dp"
-            android:background="@drawable/shapebutton"
-            android:layout_weight="1.66" />
+         </LinearLayout>
+     </LinearLayout>
 
-    </LinearLayout>
+
+     <LinearLayout
+         android:id="@+id/buttons_layout"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:orientation="horizontal"
+         android:layout_weight="10.0">
+
+         <Button
+             android:layout_width="0dp"
+             android:layout_height="60dp"
+             android:text="PAY"
+             android:id="@+id/genie_pay"
+             android:textColor="#ffffff"
+             android:textSize="15dp"
+             android:background="@drawable/shapebutton"
+             android:layout_weight="1.66" />
+
+         <Button
+             android:layout_width="0dp"
+             android:layout_height="60dp"
+             android:text="CANCEL"
+             android:id="@+id/genie_cancel"
+             android:textColor="#ffffff"
+
+             android:textSize="15dp"
+             android:background="@drawable/shapebutton"
+             android:layout_weight="1.66" />
+
+     </LinearLayout>-->
 </LinearLayout>
