--- a/app/src/main/res/layout/fragment_genie_qr.xml
+++ b/app/src/main/res/layout/fragment_genie_qr.xml
@@ -11,10 +11,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="141dp"
         android:layout_weight="10.0"
-        android:layout_margin="16dp"
-        android:background="#FFFFFF"
+        android:background="#ff2312"
         android:orientation="horizontal"
         android:weightSum="100">
 
@@ -25,18 +24,19 @@
             android:src="@drawable/genie" />
     </LinearLayout>
 
-    <!--    <ImageView
-            android:id="@+id/QrimageView"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            app:srcCompat="@mipmap/ic_launcher"
-            tools:layout_editor_absoluteX="152dp"
-            tools:layout_editor_absoluteY="218dp" />-->
+    <ImageView
+        android:id="@+id/QrimageView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:srcCompat="@mipmap/ic_launcher"
+        tools:layout_editor_absoluteX="152dp"
+        tools:layout_editor_absoluteY="218dp" />
 
-    <LinearLayout
+    <!-- <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:orientation="vertical"
+         android:paddingTop="2dp"
          android:layout_weight="40.0">
 
          <LinearLayout
@@ -44,34 +44,34 @@
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:weightSum="1.0"
-             android:paddingRight="20dp">
+             android:paddingRight="20dp"
+             android:paddingTop="2dp">
 
              <TextView
-                 android:id="@+id/Genie_test_Wallet_Tv"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
-                 android:layout_gravity="center"
                  android:layout_weight="0.5"
-                 android:gravity="center_horizontal"
-                 android:paddingLeft="20dp"
                  android:text="Genie ID/Mobile No. "
                  android:textColor="#000000"
-                 android:alpha="0.87"
+                 android:id="@+id/tlocalprod_mrp"
                  android:textSize="25dp"
-                 android:textStyle="bold" />
+                 android:textStyle="bold"
+                 android:layout_gravity="center"
+                 android:gravity="center_horizontal"
+                 android:paddingLeft="20dp" />
 
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="0.5"
                  android:weightSum="10"
-                 android:paddingLeft="15dp"
                  android:orientation="horizontal">
 
                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="8"
+                     android:inputType="number"
                      android:ems="10"
                      android:maxLength="10"
                      android:textColor="#000000"
@@ -85,20 +85,20 @@
                  />
 
                  <EditText
-                     android:id="@+id/Genie_test_Wallet_ID"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
+                     android:layout_weight="2"
+                     android:inputType="number"
+                     android:ems="10"
+                     android:maxLength="10"
+                     android:textColor="#000000"
+                     android:id="@+id/Genie_test_Wallet_ID"
+                     android:textSize="20dp"
+                     android:textStyle="bold"
+                     android:hint="Enter Genie ID/Mobile No."
                      android:layout_gravity="center"
                      android:layout_margin="10dp"
-                     android:layout_weight="2"
-                     android:background="@drawable/border_style"
-                     android:ems="10"
-                     android:hint="Enter Genie ID/Mobile No."
-                     android:inputType="number"
-                     android:maxLength="9"
-                     android:textColor="#000000"
-                     android:textSize="20dp"
-                     android:textStyle="bold" />
+                     android:background="@drawable/border_style" />
 
              </LinearLayout>
          </LinearLayout>
@@ -168,8 +168,10 @@
              android:text="CANCEL"
              android:id="@+id/genie_cancel"
              android:textColor="#ffffff"
+
              android:textSize="15dp"
              android:background="@drawable/shapebutton"
              android:layout_weight="1.66" />
-     </LinearLayout>
+
+     </LinearLayout>-->
 </LinearLayout>
